--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,12 @@
 
   <div class="page-wrap">
     <div class="side-bar">
-      <a href="{{ site.url }}{{ site.baseurl }}" class="site-title fs-6 lh-tight">{{ site.title }}</a>
+      <a href="{{ site.url }}{{ site.baseurl }}" class="site-title fs-6 lh-tight">
+        {% if site.logo_url != nil %}
+          <img class="site-title-logo" src="{{ site.logo_url | absolute_url }}">
+        {% endif %}
+        {{ site.short_title | default: site.title }}
+      </a>
       <span class="fs-3"><button class="js-main-nav-trigger navigation-list-toggle btn btn-outline" type="button" data-text-toggle="Hide">Menu</button></span>
       <div class="navigation main-nav js-main-nav">
         {% include nav.html %}
