--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="{{ seo_title }}">
     <meta itemprop="description" content="{{ seo_description }}">
-    <meta itemprop="image" content="{{ seo_image | absolute_url }}">
+    <meta itemprop="image" content="{{ site.seo_image | absolute_url }}">
     <meta name="author" content="{{ site.seo_author }}">
 
     <!-- Facebook Meta Tags -->
@@ -18,13 +18,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ seo_title }}">
     <meta property="og:description" content="{{ seo_description }}">
-    <meta property="og:image" content="{{ seo_image | absolute_url }}">
+    <meta property="og:image" content="{{ site.seo_image | absolute_url }}">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ seo_title }}">
     <meta name="twitter:description" content="{{ seo_description }}">
-    <meta name="twitter:image" content="{{ seo_image | absolute_url }}">
+    <meta name="twitter:image" content="{{ site.seo_image | absolute_url }}">
   <title>
     {{ page.title }} - {{ site.title }}
   </title>
